<?xml version="1.0"?>
<package>
  <name>spectracom_rsg</name>
  <version>0.0.0</version>
  <description>The rsg package</description>

  <maintainer email="jmp0040@auburn.edu">James Pool</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>spectracom</build_depend>
  <run_depend>spectracom</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
